# cotton

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  TODO.md  template.rs
src/: app_dir.rs  cmd.rs  digest.rs  hashing.rs  lib.rs  loggerv.rs  main.rs  process.rs  time.rs
