[package]
name = "cotton"
version = "0.0.21-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "A prelude with crates, types and functions useful for writing CLI tools."
repository = "https://github.com/jpastuszek/cotton"
documentation = "https://docs.rs/cotton"
readme = "README.md"
keywords = ["cli", "prelude"]
categories = ["command-line-interface"]
license = "MIT"

[features]
default = ["args", "logging", "time", "term", "hashing", "files", "signals"]
# Paring of arguments
args = ["clap"]
# Logger and logging
logging = ["log", "stderrlog"]
# Date/Time
time = ["chrono"]
# Terminal
term = ["ansi_term", "atty"]
# Hashing
hashing = ["hex", "sha2"]
# Files
files = ["filetime", "file-mode", "file-owner"]
# UNIX signals
signals = ["signal-hook", "uninterruptible"]

[dependencies]
itertools = "0.9.0"
assert_matches = "1.3.0"
linked-hash-map = "0.5.3"
linked_hash_set = "0.1.4"
boolinator = "2.4.0"
tap = "1.0.0"
filetime = { version = "0.2.13", optional = true }
file-mode = { version = "0.1.2", optional = true }
problem = "5.3.0"
error-context = "0.1.2"
log = { version = "0.4.8", features = ["std"], optional = true }
stderrlog = { version = "0.5.4", optional = true }
ansi_term = { version = "0.12.1", optional = true }
atty = { version = "0.2.14", optional = true }
chrono = { version = "0.4.23", optional = true }
duct = "0.13.2"
scopeguard = "1.1.0"
signal-hook = { version = "0.3.8", optional = true }
uninterruptible = { version = "0.1.0", optional = true }
directories = "3.0.2"
maybe-string = "0.1.0"
shellwords = "1.1.0"
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.9.8", optional = true }
clap = { version = "4.0.29", features = ["derive"], optional = true }

[target.'cfg(unix)'.dependencies]
exec = "0.3.1"
file-owner = { version = "0.1.0", optional = true }
