[package]
name = "cotton"
version = "0.0.21-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
edition = "2018"
description = "A prelude with crates, types and functions useful for writing CLI tools."
repository = "https://github.com/jpastuszek/cotton"
documentation = "https://docs.rs/cotton"
readme = "README.md"
keywords = ["cli", "prelude"]
categories = ["command-line-interface"]
license = "MIT"

[features]
default = ["args", "logging", "time", "term", "hashing", "files", "signals", "errors", "app", "exec", "process"]
# Parsing of arguments
args = ["clap"]
# Logger and logging
logging = ["log", "stderrlog"]
# Date/Time
time = ["chrono"]
# Terminal
term = ["ansi_term", "atty", "zzz", "term_size"]
# Hashing
hashing = ["hex", "sha2", "digest"]
# Files
files = ["filetime", "file-mode", "file-owner"]
# UNIX signals
signals = ["signal-hook", "uninterruptible"]
# Error handling
errors = ["problem", "error-context", "scopeguard", "assert_matches"]
# Application environment
app = ["directories"]
# Process execution
process = ["shellwords", "exec", "mkargs", "cradle", "gag"]
gag = ["dep:gag", "cradle?/gag"]

[dependencies]
itertools = "0.10.5"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.4"
maybe-string = "0.1.0"
boolinator = "2.4.0"
tap = "1.0.1"
clap = { version = "4.0.29", features = ["derive"], optional = true }
scopeguard = { version = "1.1.0", optional = true }
filetime = { version = "0.2.19", optional = true }
file-mode = { version = "0.1.2", optional = true }
problem = { version = "5.3.0", optional = true }
error-context = { version = "0.1.2", optional = true }
assert_matches = { version = "1.5.0", optional = true }
log = { version = "0.4.17", features = ["std"], optional = true }
stderrlog = { version = "0.5.4", optional = true }
ansi_term = { version = "0.12.1", optional = true }
atty = { version = "0.2.14", optional = true }
zzz = { version = "0.1.4", optional = true }
term_size = { version = "0.3.2", optional = true }
chrono = { version = "0.4.23", optional = true }
signal-hook = { version = "0.3.14", optional = true }
uninterruptible = { version = "0.1.0", optional = true }
directories = { version = "4.0.1", optional = true }
shellwords = { version = "1.1.0", optional = true }
hex = { version = "0.4.3", optional = true }
sha2 = { version = "0.10.6", optional = true }
digest = { version = "0.10.6", optional = true }
mkargs = { version = "1.0.0", optional = true }
#cradle = { version = "0.2.2", optional = true, features = ["gag"] }
cradle = { version = "0.2.2", optional = true }
gag = { version = "1.0.0", optional = true }

[target.'cfg(unix)'.dependencies]
exec = { version = "0.3.1", optional = true }
file-owner = { version = "0.1.1", optional = true }
